# prplgate

./: CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  glibcompat.h  prplgate.c  prplgate.cpp
